# buddy-up

./: .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  deny.toml  dist-workspace.toml  ico.sh  release-please-config.json  release-plz.toml  rust-toolchain.toml
.github/workflows/: build-apps.yml  cd.yaml  ci.yml  gui.yaml  release-all.yml  release-please.yml  release-plz.yml
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: main.rs
crates/gui/: Cargo.toml  Dioxus.toml
crates/gui/assets/: main.css
crates/gui/src/: main.rs
crates/iced/: Cargo.toml
crates/iced/src/: main.rs
crates/lib/: CHANGELOG.md  Cargo.toml
crates/lib/src/: lib.rs
crates/lib/src/algorithm/: history.rs  mod.rs
crates/lib/src/input/: mod.rs
crates/lib/src/output/: mod.rs
resources/: EULA.rtf  Info.plist  LICENSE  icon.icns  setup.wxs
src/: main.rs
src/algorithm/: history.rs  mod.rs
src/input/: mod.rs
src/output/: mod.rs
src/pairer/: mod.rs
