[workspace]
members = ["crates/cli", "crates/lib"]
resolver = "3"

[workspace.package]
authors = ["Christoph Koehler <christoph@zerodeviation.net>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ckoehler/buddy-up"
readme = "README.md"

[workspace.dependencies]
buddy-up-lib = { version = "0.2.0", path = "crates/lib"}
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
comfy-table = "7.1.4"
csv = "1.3.1"
genetic_algorithm = "0.18.1"
glob = "0.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tracing = { version = "0.1.41", features = ["log"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "ansi"] }

[workspace.lints.clippy]
# pedantic = { level = "deny", priority = -1 }
cast_precision_loss = "allow"
similar_names = "allow"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.12.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
