[workspace]
members = ["crates/cli", "crates/lib", "crates/iced"]
resolver = "3"

[workspace.package]
authors = ["Christoph Koehler <christoph@zerodeviation.net>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ckoehler/buddy-up"
readme = "README.md"
publish = false

[workspace.dependencies]
buddy-up-lib = { path = "crates/lib"}
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
comfy-table = "7.1.4"
csv = "1.3.1"
genetic_algorithm = "0.18.1"
glob = "0.3.2"
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.11"
tracing = { version = "0.1.41", features = ["log"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "ansi"] }

[workspace.lints.clippy]
# pedantic = { level = "deny", priority = -1 }
cast_precision_loss = "allow"
similar_names = "allow"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
