[workspace]
members = ["crates/cli", "crates/lib", "crates/iced"]
resolver = "3"

[workspace.package]
authors = ["Christoph Koehler <christoph@zerodeviation.net>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ckoehler/buddy-up"
readme = "README.md"
version = "0.4.0"
publish = false

[workspace.dependencies]
buddy-up-lib = { path = "crates/lib"}
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
comfy-table = "7.2.1"
csv = "1.3.1"
genetic_algorithm = "0.18.1"
glob = "0.3.3"
rfd = "0.15.4"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
tracing = { version = "0.1.41", features = ["log"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "ansi"] }

[workspace.lints.clippy]
# pedantic = { level = "deny", priority = -1 }
cast_precision_loss = "allow"
similar_names = "allow"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.release]
# Release all crates together with the same version
shared-version = true
# Run git-cliff to update changelog before release
pre-release-hook = ["git", "cliff", "--workdir", "../../", "-o", "../../CHANGELOG.md", "--tag", "{{version}}" ]
# Tag format
tag-name = "v{{version}}"
# Push everything
push = true
# Don't publish to crates.io automatically (since you have publish = false)
publish = false
