[package]
name = "buddy-up"
description = "Buddy up a changing group of people into unique pairs over time."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true


[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
glob = "0.3.2"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
buddy-up-lib.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-error.workspace = true

[[bin]]
name = "buddy"
path = "src/main.rs"

[lints]
workspace = true
