[package]
name = "buddy-up"
description = "Buddy up a changing group of people into unique pairs over time."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true


[dependencies]
anyhow.workspace = true
clap.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
buddy-up-lib.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-error.workspace = true

[[bin]]
name = "buddy"
path = "src/main.rs"

[lints]
workspace = true
