[package]
name = "gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "buddy-up-gui"
path = "src/main.rs"

[dependencies]
dioxus.workspace = true
rfd.workspace = true
buddy-up-lib.workspace = true

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
