[package]
name = "buddy-up-lib"
description = "The brains behind the buddy-up crate."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
anyhow = "1.0.96"
chrono = "0.4.40"
comfy-table = "7.1.4"
csv = "1.3.1"
genetic_algorithm = "0.18.1"
glob = "0.3.2"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "ansi"] }
tracing-error = "0.2.1"

[lints]
workspace = true
