[package]
name = "buddy-up-lib"
description = "The brains behind the buddy-up crate."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
chrono.workspace = true
comfy-table.workspace = true
csv.workspace = true
genetic_algorithm.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-error.workspace = true

[lints]
workspace = true
